RESOLVED FIXED40856
[Freetype] Pseudo-italics do not work
https://bugs.webkit.org/show_bug.cgi?id=40856
Summary [Freetype] Pseudo-italics do not work
Martin Robinson
Reported 2010-06-18 13:38:23 PDT
fast/text/fake-italic.html renders incorrectly (the squares are not transformed). I'm not sure if this is just a bug in the GTK+ pseudo-italics or if pseudo-italics is just not implemented on GTK+.
Attachments
Patch (22.11 KB, patch)
2011-09-29 20:33 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-09-29 20:33:25 PDT
Philippe Normand
Comment 2 2011-10-06 23:58:37 PDT
Comment on attachment 109248 [details] Patch Looks great, thanks!
WebKit Review Bot
Comment 3 2011-10-07 08:50:11 PDT
Comment on attachment 109248 [details] Patch Clearing flags on attachment: 109248 Committed r96941: <http://trac.webkit.org/changeset/96941>
WebKit Review Bot
Comment 4 2011-10-07 08:50:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.