[Freetype] Pseudo-italics do not work https://bugs.webkit.org/show_bug.cgi?id=40856

Patch by Martin Robinson <mrobinson@igalia.com> on 2011-10-07
Reviewed by Philippe Normand.

Source/WebCore:

* platform/graphics/freetype/FontPlatformData.h: Add the font description as an argument initializeWithFontFace.
* platform/graphics/freetype/FontPlatformDataFreeType.cpp:
(WebCore::FontPlatformData::FontPlatformData): Pass the font description to initializeWithFontFace.
(WebCore::FontPlatformData::initializeWithFontFace): If we were asked for an italic font and we were
given one that wasn't oblique or italic, activate the synthetic oblique bit.

LayoutTests:

Add test results which show this test passing now.

* platform/gtk/Skipped: Unskip a passing test.
* platform/gtk/fast/text/fake-italic-expected.png: Added.
* platform/gtk/fast/text/fake-italic-expected.txt: Added.

Canonical link: https://commits.webkit.org/85698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96941 268f45cc-cd09-0410-ab3c-d52691b4dbfc